--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.13.0",
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
@@ -19,12 +21,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.5",
     "axios": "^0.18.0",
     "expo": "^27.0.1",
     "firebase": "^5.4.0",
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.11.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
